<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity"
    >

    <ImageView
        android:id="@+id/imageViewLogoPuc"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/main_logo_description"
        app:srcCompat="@drawable/logo_puc" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageViewLogoPuc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/main_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pw"
        android:ems="10"
        android:hint="@string/main_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        app:cardBackgroundColor="#11000000"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonLogIn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:onClick="onClickLogIn"
                android:text="@string/main_login" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonSignIn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CardViewLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="onClickSignIn"
        android:text="@string/main_sign_in" />

</RelativeLayout>