<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".GalleryActivity">

    <TextView
        android:id="@+id/textViewIdentifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gallery_array"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        app:cardBackgroundColor="#11000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewGallery"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/image_description"
                app:srcCompat="@drawable/squirtle" />

            <Button
                android:id="@+id/buttonPreviousImage"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="40dp"
                android:layout_height="300dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/imageViewGallery"
                android:elevation="10dp"
                android:onClick="navigationButtonClicked"
                android:text="@string/button_previous"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonNextImage"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="40dp"
                android:layout_height="300dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_toEndOf="@+id/imageViewGallery"
                android:elevation="10dp"
                android:onClick="navigationButtonClicked"
                android:text="@string/button_next"
                android:textSize="24sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>